
lib_LTLIBRARIES = libAtlasObject.la

libAtlasObject_la_SOURCES = \
	Object.cpp \
	FloatList.c IntList.c LongList.c StringList.c Types.c URI.c URIList.c

libAtlasObjectincludedir = $(includedir)/Atlas/Object

libAtlasObjectinclude_HEADERS = \
	Object.h \
	FloatList.h IntList.h LongList.h StringList.h Types.h URI.h URIList.h \
	XList.inc XList_h.inc
