
lib_LTLIBRARIES = libAtlasObject.la

libAtlasObject_la_SOURCES = \
	Object.cpp Debug.cpp \
	FloatList.c IntList.c LongList.c StringList.c Types.c URI.c URIList.c

libAtlasObjectincludedir = $(includedir)/Object

libAtlasObjectinclude_HEADERS = \
	Object.h Debug.h \
	FloatList.h IntList.h LongList.h StringList.h Types.h URI.h URIList.h \
	XList.inc XList_h.inc

CXXFLAGS = -D_ADebug_
